--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,7 +6,7 @@ package:
   version: {{ version }}
 
 source:
-  - url: https://ftp.rpm.org/{{ name }}/releases/{{ name }}-1.x/{{ name }}-{{ version }}.tar.gz
+  - url: http://ftp.rpm.org/{{ name }}/releases/{{ name }}-1.x/{{ name }}-{{ version }}.tar.gz
     sha256: c25a4838fc8e4c1c8aacb8bd620edb3084a3d63bf8987fdad3ca2758c63240f9
     patches:
       - 0002-added-sanity-autotest.patch
